<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progress_yellow"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <Button
            android:id="@+id/button_progressbar_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button_progressbar_start" />

        <Button
            android:id="@+id/button_progressbar_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/main_button_progressbar_reset" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/layout_avatar_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/imageView_avatar_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_avatar_1" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/imageView_avatar_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_avatar_2" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/imageView_avatar_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_avatar_3" />
        </FrameLayout>

        <Button
            android:id="@+id/button_switch_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/main_button_switch_avatar" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/layout_avatar_bg"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <ImageView
            android:id="@+id/think_gif"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <com.example.multistyleprogressbar.ui.CircularZoomLoadingAnim
            android:id="@+id/circular_zoom"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/layout_avatar_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_scrolling_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_scrolling_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/main_button_scrolling_list" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_50"
        android:background="@color/layout_avatar_bg"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/px_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/tv_switch_text"
            android:layout_width="@dimen/px_1500"
            android:layout_height="wrap_content"
            android:background="@drawable/answer_gradient_border"
            android:gravity="start"
            android:lineSpacingMultiplier="1.2"
            android:maxHeight="@dimen/px_500"
            android:overScrollMode="always"
            android:padding="@dimen/px_40"
            android:scrollbars="vertical"
            android:textColor="#354764"
            android:textFontWeight="400"
            android:textSize="@dimen/px_60" />

        <Button
            android:id="@+id/button_switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/main_button_switch_text_content" />
    </LinearLayout>

    <com.example.multistyleprogressbar.ui.AutoPollRecycleView
        android:id="@+id/horizontal_flow_style_sliding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_400"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <RelativeLayout
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1500"
        android:layout_marginTop="@dimen/px_100"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_flow_style_sliding">
        <org.libpag.PAGView
            android:id="@+id/pagView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>